devops/k8s/istio/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: happyride
spec:
  mtls:
    mode: STRICT
