devops/k8s/istio/sleep-no-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep-no-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep-no-proxy
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: sleep-no-proxy
    spec:
      containers:
        - name: sleep
          image: governmentpaas/curl-ssl
          command: ["/bin/sleep", "3650d"]
          imagePullPolicy: IfNotPresent
