devops/k8s/istio/address-service-abort.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: address-service
spec:
  hosts:
    - address-service.happyride.svc.cluster.local
  http:
    - name: "address-service-http"
      route:
        - destination:
            host: address-service.happyride.svc.cluster.local       
      fault:
        abort:
          httpStatus: 503
          percentage:
            value: 50
