devops/k8s/istio/address-service-cb-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: address-service-cb
spec:
  host: address-service.happyride.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
        maxRetries: 1
    outlierDetection:
      consecutive5xxErrors: 10
      baseEjectionTime: 20s
      interval: 5s
