devops/k8s/istio/address-service-retry.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: address-service
spec:
  hosts:
    - address-service.happyride.svc.cluster.local
  http:
    - name: "address-service-http"
      route:
        - destination:
            host: address-service.happyride.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 200ms
        retryOn: gateway-error,connect-failure,refused-stream
